@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-12T08:17:12Z",
+  "timestamp" : "2022-06-12T16:18:57Z",
   "count_outdated" : 327,
   "uniques_outdated" : 184,
-  "count" : 354,
-  "uniques" : 202,
+  "count" : 355,
+  "uniques" : 203,
   "clones" : [
     {
       "timestamp": "2022-05-30T00:00:00Z",
@@ -95,6 +95,13 @@
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-06-12T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
