@@ -1,5 +1,5 @@
 {
-  "count": 27,
+  "count": 28,
   "uniques": 6,
   "clones": [
     {
@@ -66,6 +66,11 @@
       "timestamp": "2022-06-11T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-06-12T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
