@@ -1,3 +1,10 @@
+2022-06-12T16:18:57Z:
+* notice: last 14d: unq all: 6 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 184 327 / 202 354
+* notice: next accum: outdated-unq outdated-all / unq all: 184 327 / 203 355
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-06-12]
+
 2022-06-12T08:17:12Z:
 * notice: last 14d: unq all: 6 27
 * notice: prev accum: outdated-unq outdated-all / unq all: 183 326 / 202 354
